<resources>
    <string name="app_name">Notable</string>
    <string name="hint_username">Email</string>
    <string name="hint_password">Wachtwoord</string>
    <string name="button_login">Aanmelden</string>
    <string name="button_register">Registreer</string>
    <string name="error_password">Password must contain at least 8 characters, no whitespaces, 1 number, 1 lowercase and 1 uppercase.</string>
    <string name="notable_logo" />
    <string name="no_account"><u>No account? Create one</u></string>
    <string name="registration_title">Registratie</string>
    <string name="myNotes_title">Mijn notities</string>
    <string name="myGroups_title">Mijn groepen</string>
    <string name="settings" />
    <string name="content_description_settings">settings</string>
    <string name="groups">Mijn groepen</string>
    <string name="content_description_groups">mijn groepen</string>
    <string name="notes">Mijn notities</string>
    <string name="content_description_notes">mijn notities</string>
    <string name="add" />
    <string name="content_description_add">add_image</string>
    <string name="add_group" />
    <string name="content_description_add_group">add groups</string>
    <string name="settings_title">Instellingen</string>
    <string name="button_logout">uitloggen</string>
    <string name="button_personnelInfo">Persoonlijke informatie</string>
    <string name="button_contactUs">Contact us</string>
    <string name="button_PrivacyPolicy">Privacy policy</string>
    <string name="Oauth_client_id">1078540010320-3id52h074v0j5jsv3630s14l589vfmuk.apps.googleusercontent.com</string>
    <string name="GridImage" />
    <string name="button_TermsConditions">Terms &amp; Conditions</string>
    <string name="fullscreenImage">fullscreenImage</string>
    <string name="hint_message">Typ een chatbericht</string>
    <string name="chat_group" />
    <string name="send">Send</string>
    <string name="date">June 10</string>
    <string name="chat_message">This is a Message</string>
    <string name="time">10:00</string>
    <string name="date_other">Jun 10</string>
    <string name="userIcon">User Icon</string>
    <string name="user_other">John Grady Cole</string>
    <string name="chat_message_other">Message</string>
    <string name="time_other">8:00</string>
    <string name="group_button">text button</string>
    <string name="hint_subject">Onderwerp</string>
    <string name="hint_textarea">Beschrijving</string>
    <string name="contact_title">Contact us</string>
    <string name="button_complain">Versturen</string>
    <string name="error_email">This email is not valid</string>
    <string name="error_subject">Please give a subject</string>
    <string name="error_description">Please describe your problem</string>
    <string name="dots" />
    <string name="content_description_dots">dots</string>
    <string name="content_description_add_chat_image">add image to chat</string>
    <string name="invite_user">Invite user</string>
    <string name="remove_user">Remove user</string>
    <string name="share_image">Upload to group</string>
    <string name="remove_image">Delete image</string>
    <string name="content_description_delete_image">Delete image</string>
    <string name="content_description_upload_image">Upload to group</string>
    <string name="messageImage">Image message</string>
    <string name="disable_comment">Disable comments</string>
    <string name="content_description_comment_slash">Disable comments</string>
</resources>